# RecMouse

./: .gitignore  BUILD.md  README.md  RecMouse.icns  app.py  main.py  make_dmg.py  make_icns.py  play.py  pyproject.toml  record.py  record.txt  recording.json  setup.py
